ODBC binding for Ruby
---------------------

Thu Sep 16 2010 version 0.99992 released

	* ODBC::Statement.each/each_hash now output arrays when
	  invoked without block
	* column keys in result hashes now are cached/recycled Ruby strings
	* added ODBC::Database methods use_time/use_utc to directly
	  output Ruby Time/Date objects
	* added encoding support in the UTF8 variant for Ruby >= 1.9
	* added module constant ODBC::UTF8 to indicate variant of module
	* fixes for M$SQL server reporting zero column sizes
	  and unknown data types for varchar(strmax) columns
	* eliminated compiler warnings
	* use StringValueCStr instead of STR2CSTR (Ruby >= 1.9.1)
	* small change for decision when to use SQLGetData() loop

Sun Apr 25 2010 version 0.99991 released

	* detect HAVE_LONG_LONG for builds with unixODBC
	* UTF-8 coding/decoding fix for range 0x80..0xBF

Thu Feb 18 2010 version 0.9999 released

	* integrated Bosko Ivanisevic's fixes in ext/utf8/extconf.rb
	  and test/test.rb and test/utf8/test.rb

Fri Jan 15 2010 version 0.9998 released

	* documentation update
	* reorganized directory layout for making a gem

Wed May 20 2009 version 0.9997 released

	* added Chad Johnson's FreeTDS/MSSQL patch to prevent from
	  re-prepare of queries with SQL_VARCHAR parameters

Mon Feb 02 2009 version 0.9996 released

	* updates for Ruby > 1.8
	* added Stephen Veit's SQL_NO_TOTAL handling to improve
	  retrieving large SQL_C_BINARY data
	* fixes for SQLExecute/SQLExecDirect returning SQL_NO_DATA

Sat Apr 07 2007 version 0.9995 released

	* init.c: prefer libiodbc.so.2 over libiodbc.so and
	  libodbc.so.1 over libodbc.so and same logic for
	  the installer shared library
	* no exception thrown on stale HSTMT for ODBC::Statement.nrows

Mon Dec 25 2006 version 0.9994 released

	* improved doc on ODBC::Statement.*param*, ODBC::Parameter,
	  and related ODBCProc
	* added support for output/input-output parameters in queries,
	  methods ODBC::Statement.param_iotype/param_output_type/